--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"tesseract.js": "^4.1.2",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
 		"vitest": "^0.25.3",
