--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "sveltekit-2",
+	"name": "sveltekit-vercel-wasm-bundling",
+	"description": "Testing Tesseract.js bundling with SvelteKit server endpoints in Vercel",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -11,12 +12,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-vercel": "^3.0.0",
 		"@sveltejs/kit": "^1.5.0",
-		"@types/cookie": "^0.5.1",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
@@ -25,10 +22,7 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tesseract.js": "^4.1.2",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.0",
-		"vitest": "^0.25.3",
-		"web-vitals": "^3.3.1"
+		"vite": "^4.3.0"
 	},
 	"type": "module"
 }
