--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
+		"vercel:dev": "vercel dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
@@ -22,6 +23,7 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tesseract.js": "^4.1.2",
+		"vercel": "^32.2.5",
 		"vite": "^4.3.0"
 	},
 	"type": "module"
