--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
-		"vercel:dev": "vercel dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
@@ -13,7 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-vercel": "^3.0.0",
+		"@sveltejs/adapter-cloudflare-workers": "^1.1.4",
 		"@sveltejs/kit": "^1.5.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -23,7 +22,6 @@
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tesseract.js": "^4.1.2",
-		"vercel": "^32.2.5",
 		"vite": "^4.3.0"
 	},
 	"type": "module"
